CHANGES IN VERSION 1.5.7
------------------------
 o geom_strip now only accept node id as input and support labeling strip <2016-07-27, Wed>
 o nodeid function for converting node label(s) to node id(s) <2016-07-27, Wed> 
 
CHANGES IN VERSION 1.5.6
------------------------
 o remove dependency of Biostring for installing ggtree <2016-07-21, Thu>
   + still needed for building vignette and for processing FASTA file
 o remove dependency of EBImage for building & installing ggtree <2016-07-21, Thu>
   + the package is still needed if user want to annotate tree with image file
 o `%<+%` now works with tbl_df <2016-07-21, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/66
 o identify method for ggtree <2016-06-28, Tue>
   + see https://guangchuangyu.github.io/2016/06/identify-method-for-ggtree
 o geom_balance contributed by Justin Silverman <2016-06-22, Wed>
   + see https://github.com/GuangchuangYu/ggtree/pull/64

CHANGES IN VERSION 1.5.5
------------------------
 o update geom_tiplab2 according to angle change introduced by open_tree <2016-06-20, Mon>
 o bug fixed in collapse, now work with collapse a clade that contain a subclade that was already collapsed <2016-06-02-Thu>
 o bug fixed if time-scaled tree extend into the BCE. <2016-06-02, Thu>
   + as.Date won't work for BCE time.
   + as.Date=FALSE by default in fortify method, just use the time in decimal format (real number, not Date object).
 
CHANGES IN VERSION 1.5.4
------------------------
 o reroot method for raxml object <2016-05-22, Sun>
 o bug fixed in scaleClade, now y positions are (hopefully) always correct. <2016-05-20, Fri>
 o bug fixed in collapse <2016-05-20, Fri>
   + if user collapse a node that is an offspring of a collapsed node, print warning msg and return the tree directly
 o use byte compiler <2016-05-18, Wed>
 o change any(is.na()) to anyNA() which is more efficient <2016-05-18, Wed> 
 o https://github.com/Bioconductor-mirror/ggtree/commit/559548c66b51253e8ccb983d353385838a81f106
